# timekeeping

./: .gitignore  Cargo.toml  README.md  compose.yaml
src/: lib.rs  main.rs  state.rs
src/routes/: clients.rs  invoices.rs  mod.rs  root.rs  timekeepers.rs  timekeeping.rs
templates/: index.html
templates/clients/: client_card.html  client_cards.html  client_deleted.html  client_detail.html  clients.html  created_client.html  new_client_form.html  no_clients.html
templates/components/: footer.html  header.html
templates/invoices/: invoices.html
templates/root/: root.html
templates/timekeepers/: created_timekeeper.html  new_timekeeper_form.html  no_timekeepers.html  timekeeper_card.html  timekeeper_cards.html  timekeeper_deleted.html  timekeeper_detail.html  timekeepers.html
templates/timekeeping/: created_timekeeping.html  new_timekeeping_form.html  no_timekeeping.html  timekeeping.html  timekeeping_card.html  timekeeping_cards.html  timekeeping_deleted.html  timekeeping_detail.html
