[package]
name = "timekeeping"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4.35", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
surrealdb = { version = "1.3.1", features = ["kv-rocksdb"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4"] }
